# osr_course_pkgs

./: .gitignore  README.md  dependencies.rosinstall
osr_control/: CMakeLists.txt  package.xml  setup.py
osr_control/config/: controllers.yaml
osr_control/launch/: controllers.launch  controllers_force_control_demo.launch
osr_control/src/osr_control/: controllers.py
osr_description/: CMakeLists.txt  package.xml
osr_description/config/: robot_viewer.rviz
osr_description/launch/: rviz_denso_robotiq_85_gripper.launch  rviz_denso_vs060_robot.launch  visualize_robot.launch  visualize_robot_gripper.launch
osr_description/urdf/: common.gazebo.xacro  denso_robotiq_85_gripper.urdf.xacro  denso_vs060.urdf  denso_vs060_robot.urdf.xacro
osr_description/urdf/meshes/: BASE.dae  J1.dae  J2.dae  J3.dae  J4.dae  J5.dae  J6.dae
osr_examples/: CMakeLists.txt  package.xml
osr_examples/opencv_example/: right_camera_info.yaml
osr_examples/scripts/: environment_2d.py  gazebo_force_control.py  gazebo_pick_and_place.py  openrave_pick_and_place.py  setting.py
osr_examples/vision_assignment_data/: left_camera_info.yaml
osr_gazebo/: CMakeLists.txt  package.xml
osr_gazebo/launch/: cubes_task.launch  robotic_setup.launch
osr_gazebo/models/denso_base/: model.config  model.sdf
osr_gazebo/models/openni_kinect/: model.config  model.sdf
osr_gazebo/worlds/: cubes_task.world  robotic_setup.world
osr_openrave/: CMakeLists.txt  package.xml  setup.py
osr_openrave/objects/: base.kinbody.xml  cafe_table.kinbody.xml  container.kinbody.xml  wood_cube.kinbody.xml
osr_openrave/objects/meshes/: cafe_table.stl
osr_openrave/robots/: denso_robotiq_85_gripper.robot.xml  robotiq_85_gripper.robot.xml
osr_openrave/robots/meshes/visual/: robotiq_85_finger_link.wrl  robotiq_85_finger_tip_link.wrl  robotiq_85_inner_knuckle_link.wrl  robotiq_85_knuckle_link.wrl
osr_openrave/src/osr_openrave/: kinematics.py  planning.py
osr_openrave/worlds/: cubes_task.env.xml  pick_and_place.env.xml
