<package>
  <name>osr_description</name>
  <version>0.1.0</version>
  <description>
   <p>This package provides the robot descriptions used during the Open Source Robotics Course.</p>
  </description>
  <maintainer email="fsuarez.ruiz@pmail.ntu.edu.sg">Francisco Suarez Ruiz</maintainer>
  <license>BSD</license>
  <author email="fsuarez.ruiz@pmail.ntu.edu.sg">Francisco Suarez Ruiz</author>
  <url type="website">http://osrobotics.org</url>
  <url type="bugtracker">https://github.com/quangounet/osr_course_pkgs/issues</url>
  <url type="repository">https://github.com/quangounet/osr_course_pkgs</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>robotiq_description</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>rviz</run_depend>

</package>
