<?xml version="1.0"?>
<package>
  <name>osr_gazebo</name>
  <version>0.1.0</version>
  <description>The osr_gazebo package</description>
  
  <maintainer email="fsuarez.ruiz@pmail.ntu.edu.sg">Francisco Suarez Ruiz</maintainer>
  <license>BSD</license>
  <author email="fsuarez.ruiz@pmail.ntu.edu.sg">Francisco Suarez Ruiz</author>
  <url type="website">http://osrobotics.org</url>
  <url type="bugtracker">https://github.com/quangounet/osr_course_pkgs/issues</url>
  <url type="repository">https://github.com/quangounet/osr_course_pkgs</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>osr_control</build_depend>
  <build_depend>osr_description</build_depend>
  
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>osr_description</run_depend>
  <run_depend>osr_control</run_depend>
  <run_depend>robotiq_gazebo</run_depend>
</package>
