<?xml version="1.0"?>
<package>
  <name>osr_openrave</name>
  <version>0.1.0</version>
  <description>The osr_openrave package</description>

  <maintainer email="fsuarez.ruiz@pmail.ntu.edu.sg">Francisco Suarez Ruiz</maintainer>
  <license>BSD</license>
  <author email="fsuarez.ruiz@pmail.ntu.edu.sg">Francisco Suarez Ruiz</author>
  <url type="website">http://osrobotics.org</url>
  <url type="bugtracker">https://github.com/quangounet/osr_course_pkgs/issues</url>
  <url type="repository">https://github.com/quangounet/osr_course_pkgs</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>openrave_catkin</build_depend>
  
  <run_depend>openrave_catkin</run_depend>
  <run_depend>python-matplotlib</run_depend>
  
</package>
